# PI_2023-2

./: .gitignore  .gitmodules  README.md  package-lock.json
PI/: pyvenv.cfg
PI/Scripts/: activate  activate.bat
backend/: README.md  pyproject.toml
backend/database/: .gitignore  app.py  main.py  requirements.txt
backend/database/config/: db.py
backend/database/controllers/: Persona.py
backend/database/datasetEnv/: pyvenv.cfg
backend/database/models/: Rol.py  auto.py  horario.py  lugar.py  persona.py  usuario.py
backend/database/routes/: auto.py  horario.py  persona.py  usuario.py
backend/database/schemas/: auto.py  horario.py  persona.py  usuario.py
backend/models/: .gitmodules
backend/models/Automatic-License-Plate-Recognition-using-YOLOv8/: .gitignore  README.md  client.py  dockerfile  main.py  model_constants.py  network_utils.py  requirements.txt  util.py  video_to_frame.py
backend/models/Automatic-License-Plate-Recognition-using-YOLOv8/unmod/: dockerfile_2
frontend/: .env.example  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json
frontend/src/: store.ts
frontend/src/lib/: auth.ts  env.ts
frontend/src/routes/: +layout.svelte  +page.ts
frontend/src/routes/historial/: +page.svelte  +page.ts  type.ts  types.ts
frontend/src/routes/login/: +page.svelte
frontend/src/routes/patentes/: +page.server.ts  +page.svelte  +page.ts  modalForm.svelte  tableTest.svelte  types.ts
frontend/src/routes/patentes/components/: modalForm.svelte
