[tool.poetry]
name = "backend"
version = "0.1.0"
description = "Backend de la aplicacion de identificacion de autos sospechosos en comunidades"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.103.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
